--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"author": "RadiumThemes",
 	"homepage": "http://radiumthemes.com/",
 	"devDependencies": {
-		"browserify": "^13.1.0",
+		"browserify": "^14.4.0",
 		"browserify-shim": "^3.8.12",
 		"grunt": "^1.0.1",
 		"grunt-browserify": "^5.0.0",
@@ -13,19 +13,19 @@
 		"grunt-contrib-jshint": "^1.0.0",
 		"grunt-contrib-watch": "^1.0.0",
 		"grunt-postcss": "~0.8.0",
-		"grunt-contrib-uglify": "~2.0.0",
+		"grunt-contrib-uglify": "~3.0.1",
 		"grunt-contrib-sass": "~1.0.0",
-		"autoprefixer": "~6.4.0",
-		"cssnano": "~3.7.3",
+		"autoprefixer": "~7.1.1",
+		"cssnano": "~4.0.0-rc.0",
 		"grunt-checktextdomain": "~1.0.1",
 		"grunt-wp-readme-to-markdown-with-extra": "~2.2.0",
 		"grunt-bumpup": "~0.6.3",
-		"grunt-shell": "~1.3.0",
+		"grunt-shell": "~2.1.0",
 		"grunt-text-replace": "~0.4.0",
 		"grunt-release": "~0.14.0",
 		"grunt-banner": "~0.6.0",
 		"grunt-contrib-copy": "~1.0.0",
-		"grunt-contrib-clean": "~1.0.0",
+		"grunt-contrib-clean": "~1.1.0",
 		"remapify": "2.1.0",
 		"matchdep": "~1.0.1"
 	},
