--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-	"name": "builder",
-	"slug": "builder",
-	"version": "1.0.0",
-	"author": "RadiumThemes",
-	"homepage": "http://radiumthemes.com/",
-	"devDependencies": {
-		"browserify": "^14.4.0",
-		"browserify-shim": "^3.8.12",
-		"grunt": "^1.0.1",
-		"grunt-browserify": "^5.0.0",
-		"grunt-exorcise": "~2.1.1",
-		"grunt-contrib-jshint": "^1.0.0",
-		"grunt-contrib-watch": "^1.0.0",
-		"grunt-postcss": "~0.8.0",
-		"grunt-contrib-uglify": "~3.0.1",
-		"grunt-contrib-sass": "~1.0.0",
-		"autoprefixer": "~7.1.1",
-		"cssnano": "~4.0.0-rc.0",
-		"grunt-checktextdomain": "~1.0.1",
-		"grunt-wp-readme-to-markdown-with-extra": "~2.2.0",
-		"grunt-bumpup": "~0.6.3",
-		"grunt-shell": "~2.1.0",
-		"grunt-text-replace": "~0.4.0",
-		"grunt-release": "~0.14.0",
-		"grunt-banner": "~0.6.0",
-		"grunt-contrib-copy": "~1.0.0",
-		"grunt-contrib-clean": "~1.1.0",
-		"remapify": "2.1.0",
-		"matchdep": "~1.0.1"
-	},
-	"browserify": {
-		"transform": [
-			"browserify-shim"
-		]
-	},
-	"browserify-shim": {
-		"jquery": "global:jQuery",
-		"underscore": "global:_",
-		"backbone": {
-			"exports": "global:Backbone",
-			"depends": [
-				"jquery",
-				"underscore"
-			]
-		},
-		"marionette": {
-			"exports": "global:Marionette",
-			"depends": [
-				"jquery",
-				"underscore",
-				"backbone"
-			]
-		}
-	}
+  "name": "builder",
+  "slug": "builder",
+  "version": "1.0.0",
+  "author": "RadiumThemes",
+  "homepage": "http://radiumthemes.com/",
+  "devDependencies": {
+    "autoprefixer": "~7.1.1",
+    "browserify": "^14.4.0",
+    "browserify-shim": "^3.8.12",
+    "cssnano": "~4.0.0-rc.0",
+    "grunt": "^1.0.1",
+    "grunt-banner": "~0.6.0",
+    "grunt-browserify": "^5.0.0",
+    "grunt-bumpup": "~0.6.3",
+    "grunt-checktextdomain": "~1.0.1",
+    "grunt-contrib-clean": "~1.1.0",
+    "grunt-contrib-compress": "^1.4.3",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-sass": "~1.0.0",
+    "grunt-contrib-uglify": "~3.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-exorcise": "~2.1.1",
+    "grunt-postcss": "~0.8.0",
+    "grunt-release": "~0.14.0",
+    "grunt-shell": "~2.1.0",
+    "grunt-text-replace": "~0.4.0",
+    "grunt-wp-readme-to-markdown-with-extra": "~2.2.0",
+    "matchdep": "~1.0.1",
+    "remapify": "2.1.0"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "jquery": "global:jQuery",
+    "underscore": "global:_",
+    "backbone": {
+      "exports": "global:Backbone",
+      "depends": [
+        "jquery",
+        "underscore"
+      ]
+    },
+    "marionette": {
+      "exports": "global:Marionette",
+      "depends": [
+        "jquery",
+        "underscore",
+        "backbone"
+      ]
+    }
+  }
 }
