--- a/bower.json
+++ b/bower.json
@@ -35,6 +35,7 @@
     "dialogs-manager": "https://github.com/cobicarmel/dialogs-manager/archive/master.zip",
     "backbone": "^1.3.3",
     "backbone.marionette": "marionette#^3.1.0",
-    "odometer": "^0.4.8"
+    "odometer": "^0.4.8",
+    "jquery-circle-progress": "^1.2.2"
   }
 }
