--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,9 @@
 {
-    "name":         "FrankM1/radium-newsfront-importer",
-    "description":  "Layout qazana plugin by RadiumThemes.",
+    "name":         "FrankM1/qazana",
+    "description":  "Layout builder plugin by RadiumThemes.",
     "license":      "GPL-3.0+",
     "type":         "project",
-    "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "YahnisElsts/plugin-update-checker",
-                "version": "dev-master",
-                "dist": {
-                    "url": "https://github.com/YahnisElsts/plugin-update-checker/archive/master.zip",
-                    "type": "zip",
-                    "reference": "master"
-                }
-            }
-        }
-    ],
     "require": {
-        "YahnisElsts/plugin-update-checker": "dev-master",
         "mobiledetect/mobiledetectlib": "^2.8"
     }
 }
