--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "qazana",
   "slug": "qazana",
   "version": "1.3.1",
-  "author": "RadiumThemes",
-  "homepage": "http://radiumthemes.com/",
+  "author": "Franklin Gitonga",
+  "homepage": "http://qazana.net/",
   "devDependencies": {
     "autoprefixer": "~7.1.1",
     "browserify": "^14.4.0",
