--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-release": "~0.14.0",
     "grunt-shell": "~2.1.0",
     "grunt-text-replace": "~0.4.0",
+    "grunt-wp-readme-to-markdown": "^2.0.1",
     "grunt-wp-readme-to-markdown-with-extra": "~2.2.0",
     "jit-grunt": "^0.10.0",
     "matchdep": "~1.0.1",
