--- a/.travis.yml
+++ b/.travis.yml
@@ -23,17 +23,17 @@ php:
     - 5.5
     - 5.6
     - 7.0
+    - 7.1
+    - 7.2
 
 # WordPress version used in first build configuration.
 env:
     - WP_VERSION=latest WP_MULTISITE=0
     - WP_VERSION=latest WP_MULTISITE=1
+    - WP_VERSION=4.8 WP_MULTISITE=0
+    - WP_VERSION=4.8 WP_MULTISITE=1
     - WP_VERSION=4.7 WP_MULTISITE=0
     - WP_VERSION=4.7 WP_MULTISITE=1
-    - WP_VERSION=4.6 WP_MULTISITE=0
-    - WP_VERSION=4.6 WP_MULTISITE=1
-    - WP_VERSION=4.5 WP_MULTISITE=0
-    - WP_VERSION=4.5 WP_MULTISITE=1
 
 install:
   - curl -s http://getcomposer.org/installer | php
@@ -53,15 +53,19 @@ before_script:
       else
         composer global require "phpunit/phpunit=4.8.*"
       fi
-  - composer require satooshi/php-coveralls '~1.0'
+  - composer require php-coveralls/php-coveralls '~1.1'
   - composer global require wp-coding-standards/wpcs
   - phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
+  - composer global require --dev jakub-onderka/php-parallel-lint
 #  - npm install -g grunt-cli
 #  - npm install
 
 script:
   - phpcs -p -s -n . --standard=./ruleset.xml --extensions=php
+  - jscs -c .jscsrc .
+  - jshint .
   - phpunit --coverage-clover=build/logs/clover.xml
+  - parallel-lint --blame --exclude node_modules --exclude vendor .
 #  - grunt test --verbose
 
 after_success:
