--- a/package.json
+++ b/package.json
@@ -40,5 +40,7 @@
         "uglifyjs-webpack-plugin": "^1.3.0",
         "webpack": "^4.28.3"
     },
-    "dependencies": {}
+    "dependencies": {
+        "animejs": "^3.0.1"
+    }
 }
