--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "webpack": "^4.28.3"
     },
     "dependencies": {
-        "animejs": "^3.0.1"
+        "animejs": "^3.0.1",
+        "fontfaceobserver": "^2.1.0"
     }
 }
