--- a/package.json
+++ b/package.json
@@ -6,42 +6,43 @@
     "author": "Qazana Team",
     "homepage": "https://qazana.net/",
     "devDependencies": {
-        "autoprefixer": "~8.5.0",
-        "babel-core": "^6.26.3",
-        "babel-eslint": "^8.2.6",
-        "babel-loader": "^7.1.5",
-        "babel-preset-env": "^1.7.0",
-        "cssnano": "~3.10.0",
-        "eslint": "^5.11.1",
+        "@babel/core": "^7.4.3",
+        "@babel/preset-env": "^7.4.3",
+        "autoprefixer": "~9.5.1",
+        "babel-eslint": "^10.0.1",
+        "babel-loader": "^8.0.5",
+        "cssnano": "~4.1.10",
+        "eslint": "^5.16.0",
         "eslint-config-wordpress": "^2.0.0",
-        "eslint-loader": "^2.1.0",
-        "eslint-plugin-jsx-a11y": "^6.1.2",
-        "eslint-plugin-react": "^7.12.2",
+        "eslint-loader": "^2.1.2",
+        "eslint-plugin-jsx-a11y": "^6.2.1",
+        "eslint-plugin-react": "^7.12.4",
         "eslint-plugin-wordpress": "git://github.com/WordPress-Coding-Standards/eslint-plugin-wordpress.git#1774343f6226052a46b081e01db3fca8793cc9f1",
         "extract-text-webpack-plugin": "^3.0.2",
-        "grunt": "^1.0.2",
+        "grunt": "^1.0.4",
         "grunt-banner": "~0.6.0",
         "grunt-bumpup": "~0.6.3",
         "grunt-checktextdomain": "~1.0.1",
-        "grunt-contrib-clean": "~1.1.0",
+        "grunt-contrib-clean": "~2.0.0",
         "grunt-contrib-copy": "~1.0.0",
-        "grunt-contrib-qunit": "^2.0.0",
+        "grunt-contrib-qunit": "^3.1.0",
         "grunt-contrib-sass": "~1.0.0",
         "grunt-contrib-watch": "^1.1.0",
         "grunt-postcss": "~0.9.0",
         "grunt-release": "~0.14.0",
-        "grunt-sass": "~2.1.0",
-        "grunt-shell": "~2.1.0",
+        "grunt-sass": "~3.0.2",
+        "grunt-shell": "~3.0.1",
         "grunt-text-replace": "~0.4.0",
-        "grunt-webpack": "^3.1.2",
+        "grunt-webpack": "^3.1.3",
         "grunt-wp-readme-to-markdown-with-extra": "~2.2.0",
         "load-grunt-tasks": "^4.0.0",
         "path": "^0.12.7",
-        "uglifyjs-webpack-plugin": "^1.3.0",
-        "webpack": "^4.28.3"
+        "uglifyjs-webpack-plugin": "^2.1.2",
+        "webpack": "^4.30.0"
     },
     "dependencies": {
         "animejs": "^3.0.1",
-        "fontfaceobserver": "^2.1.0"
+        "fontfaceobserver": "^2.1.0",
+        "splitting": "^1.0.6"
     }
 }
