--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "grunt-webpack": "^3.1.3",
         "grunt-wp-readme-to-markdown-with-extra": "~2.2.0",
         "load-grunt-tasks": "^4.0.0",
+        "node-sass": "^4.12.0",
         "path": "^0.12.7",
         "uglifyjs-webpack-plugin": "^2.1.2",
         "webpack": "^4.30.0"
