--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "author": "Qazana Team",
     "homepage": "https://qazana.net/",
     "devDependencies": {
-        "@babel/core": "^7.4.3",
-        "@babel/preset-env": "^7.4.3",
-        "autoprefixer": "~9.5.1",
+        "babel-core": "^6.26.3",
+        "babel-preset-env": "^1.7.0",
+        "babel-loader": "^7.1.5",
         "babel-eslint": "^10.0.1",
-        "babel-loader": "^8.0.5",
+        "autoprefixer": "~9.5.1",
         "cssnano": "~4.1.10",
         "eslint": "^5.16.0",
         "eslint-config-wordpress": "^2.0.0",
