--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "grunt-contrib-watch": "^1.1.0",
         "grunt-postcss": "~0.9.0",
         "grunt-release": "~0.14.0",
-        "grunt-sass": "~3.0.2",
+        "grunt-sass": "^3.0.2",
         "grunt-shell": "~3.0.1",
         "grunt-text-replace": "~0.4.0",
         "grunt-webpack": "^3.1.3",
