--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,12 @@ php:
 env:
     - WP_VERSION=latest WP_MULTISITE=0
     - WP_VERSION=latest WP_MULTISITE=1
+    - WP_VERSION=5.1 WP_MULTISITE=0
+    - WP_VERSION=5.1 WP_MULTISITE=1
+    - WP_VERSION=5.0 WP_MULTISITE=0
+    - WP_VERSION=5.0 WP_MULTISITE=1
+    - WP_VERSION=4.9 WP_MULTISITE=0
+    - WP_VERSION=4.9 WP_MULTISITE=1
     - WP_VERSION=4.8 WP_MULTISITE=0
     - WP_VERSION=4.8 WP_MULTISITE=1
     - WP_VERSION=4.7 WP_MULTISITE=0
