--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "babel-eslint": "^8.2.6",
         "babel-loader": "^7.1.5",
         "babel-preset-env": "^1.7.0",
-        "cssnano": "~3.10.0",
+        "cssnano": "^4.1.10",
         "eslint": "^5.11.1",
         "eslint-config-wordpress": "^2.0.0",
         "eslint-loader": "^2.1.0",
@@ -40,5 +40,10 @@
         "uglifyjs-webpack-plugin": "^1.3.0",
         "webpack": "^4.28.3"
     },
-    "dependencies": {}
+    "dependencies": {},
+    "scripts": {
+        "start": "grunt develop",
+        "build": "grunt",
+        "test": "grunt test"
+    }
 }
