--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":         "FrankM1/qazana",
+    "name":         "frankm1/qazana",
     "description":  "Layout builder plugin by RadiumThemes.",
     "license":      "GPL-3.0+",
     "type":         "project",
